# ferris-elf

./: .gitignore  README.md  bot.py  config.py  constants.py  database.py  dbmate.py  error_handler.py  fetch.py  lib.py  main.py  messages.py  pyproject.toml  runner.py  settings.toml  stats.py
.github/workflows/: docker-image.yml  format.yml  linters.yml  pytest.yml
db/: schema.sql
db/migrations/: 20240108100950_initial.sql  20240118045802_move_bench_format.sql
ferris_elf/: __init__.py  bot.py  config.py  constants.py  containers.py  database.py  lib.py  picoseconds.py
ops/: install-systemd-svcs.sh  update.sh
ops/systemd/: ferris-elf-bot.service  ferris-elf-fetch.service  ferris-elf-fetch.timer  ferris-elf-update.service  ferris-elf-update.timer
runner/: Cargo.toml  Dockerfile  crate-information.json  crate-modifications.toml  run_bench.sh
runner/benches/: bench.rs
runner/src/: aocsoln.rs  code.rs  lib.rs  main.rs  placeholder.rs
runner/supply-chain/: audits.toml  config.toml
tests/: test_picoseconds.py
