[tool.poetry]
name = "ferris-elf"
version = "0.1.0"
description = "A bot to profile Rust code shared over Discord"
authors = ["proegssilb <proegssilb@gmail.com>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.3"
"discord.py" = "^2.3.2"
dynaconf = "^3.2.4"
tzdata = "^2023.3"
# this is used in fetch.py
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"
# these are type stubs for mypy to check fetch.py
types-requests = "^2.31.0.10"

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unreachable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
