[package]
name = "ferris-elf"
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = "1"
itertools = "0.10"
rayon = "1"
regex = "1"
parse-display = "0.6"
memchr = "2"
arrayvec = "0.7"
smallvec = "1"
rustc-hash = "1"
bitvec = "1"
dashmap = "5"
btoi = "0.4"
nom = "7"
ascii = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5.1" }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench"
harness = false
